Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/T8038182/CrashFunctionDescriptorExceptionTest.out
CrashFunctionDescriptorExceptionTest.java:12:13: compiler.err.prob.found.req: (compiler.misc.no.suitable.functional.intf.inst: CrashFunctionDescriptorExceptionTest.I<CrashFunctionDescriptorExceptionTest.B>)
1 error
